--- a/styles.css
+++ b/styles.css
@@ -35,12 +35,14 @@ body {
     5px 5px 15px 5px rgba(0, 0, 0, 0);
   box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000,
     5px 5px 15px 5px rgba(0, 0, 0, 0);
-  /* box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.25); */
 }
 
 .game-header {
+  padding-top: 1em;
   height: 20vh;
   text-align: center;
+  position: relative;
+  z-index: 1;
 }
 
 .game-area {
@@ -128,7 +130,7 @@ body {
 }
 
 #rule-pic {
-  padding: 0.5em;
+  position: relative;
   z-index: 1;
 }
 
