--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap');
 
 * {
   margin: 0;
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Otomanopee One', sans-serif;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -52,7 +52,7 @@ body {
 
 .game-header {
   padding-top: 2em;
-  height: 20vh;
+  height: 15vh;
   text-align: center;
   position: relative;
   z-index: 1;
@@ -82,11 +82,11 @@ body {
 }
 
 #round {
-  position: absolute;
+  /* position: absolute;
   left: 0.8em;
-  top: 0.8em;
+  top: 0.8em; */
   font-weight: bold;
-  font-size: 2.5em;
+  /* font-size: 2.5em; */
 }
 
 .game-area {
@@ -117,6 +117,7 @@ body {
   width: 15vw;
   height: 20vw;
   text-align: center;
+  margin-top: 2em;
 }
 
 .player-choice-picture img {
@@ -125,7 +126,7 @@ body {
   height: auto;
   width: auto;
   max-width: 15vw;
-  max-height: 20vw;
+  max-height: 25vw;
   margin: 1.5em;
 }
 
@@ -168,6 +169,7 @@ body {
 }
 
 .button {
+  font-family: 'Otomanopee One', sans-serif;
   font-size: 0.9em;
   font-weight: bolder;
   height: 2em;
